[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm",
]

[project]
name = "chanfig"
description = "Easier Configuration"
readme = "README.md"
keywords = [
  "config",
  "deep-learning",
  "dict",
  "machine-learning",
]
license = { text = "Unlicense OR AGPL-3.0-or-later OR GPL-2.0-or-later OR BSD-4-Clause OR MIT OR Apache-2.0" }
maintainers = [
  { name = "Zhiyuan Chen", email = "this@zyc.ai" },
]
authors = [
  { name = "Zhiyuan Chen", email = "this@zyc.ai" },
  { name = "Evian C. Liu", email = "evian.liu@outlook.com" },
]
requires-python = ">3.7"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = [
  "version",
]
dependencies = [
  "lazy-imports",
  "pyyaml",
  "tomli; python_version<'3.11'",
  "typing-extensions",
]
urls.documentation = "https://chanfig.danling.org"
urls.homepage = "https://chanfig.danling.org"
urls.repository = "https://github.com/ZhiyuanChen/CHANfiG"

[tool.setuptools]
packages.find.include = [ "chanfig*" ]

[tool.setuptools_scm]
write_to = "chanfig/_version.py"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.flake8]
max-line-length = 120

[tool.pylint]
format.max-line-length = 120
main.fail-under = 9.8
messages_control.disable = """
  E0012,
  E0401,
  R0201,
  R0801,
"""
reports.output-format = "colorized"

[tool.pytest]
addopts = [ "--doctest-modules", "--cov" ]

[tool.coverage]
run.branch = true
run.source = [ "chanfig" ]
paths.source = [ "chanfig" ]
report.fail_under = 80
report.show_missing = true
json.output = "coverage.json"
xml.output = "coverage.xml"

[tool.mypy]
ignore_missing_imports = true
